--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -176,6 +176,7 @@ body.noscript .navigation {
 
 .logo {
     height: 2.5em;
+    width: 7em;
     margin: 1em;
     opacity: 1;
 
@@ -195,7 +196,7 @@ body.noscript .navigation {
 
 .btn-donate {
   position: absolute;
-  padding: 1.8em 1em;
+  padding: 1.7em 1em;
   display: inline-block;
   color: $nav-color;
   background-color: $green;
